fix: remove scrollbar from layout

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,3 +8,7 @@ input::-webkit-inner-spin-button,
 input::-webkit-outer-spin-button {
   appearance: none;
 }
+
+::-webkit-scrollbar {
+  width: 0px;
+}
